tests/tests/neg/error_messages/invalid_reflect00.rs
#[flux::reflect]
#[flux::refined_by(val : int )]
pub enum Day {
    //~^ ERROR reflected enum with `refined_by` annotation
    Sat,
    Sun,
}
